--- a/style.css
+++ b/style.css
@@ -1,10 +1,41 @@
 :root {
-  --main-background-color: "#6c757d";
-  --secondary-background-color: "#495057";
+  --main-background-color: #495057;
+  --secondary-background-color: #6c757d;
+  --hover-color: #767f88;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--main-background-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.cell {
+  width: 100px;
+  height: 100px;
+  background-color: var(--secondary-background-color);
+  gap: 5px;
+}
+
+.cell:hover {
+  background-color: var(--hover-color);
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+.main-board {
+  display: flex;
+  gap: 3px;
 }
