--- a/style.css
+++ b/style.css
@@ -65,10 +65,32 @@ body h1 {
 
 .main-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  padding: 20px 30px 80px;
+  padding: 20px 30px 20px;
   border-radius: 10px;
   background-color: var(--secondary-gameboard-color);
+}
+
+.control-buttons {
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.control-button {
+  padding: 10px;
+  width: 40%;
+  color: black;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+#settings {
+  background-color: rgb(7, 190, 7);
+}
+
+#clear {
 }
