--- a/style.css
+++ b/style.css
@@ -116,8 +116,23 @@ body h1 {
 
 .settings_dialog {
   width: 400px;
-  height: 100px;
+  height: 180px;
   margin: auto;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+}
+
+.input-dialog {
+  display: flex;
+  flex-direction: column;
+}
+.input-dialog input {
+  height: 24px;
 }
 
 .settings_dialog::backdrop {
