--- a/style.css
+++ b/style.css
@@ -116,15 +116,14 @@ body h1 {
 
 .settings_dialog {
   width: 400px;
-  height: 180px;
+  height: 220px;
   margin: auto;
   outline: none;
   border: none;
   border-radius: 10px;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2rem;
+
+  font-size: 1.4rem;
 }
 
 .input-dialog {
@@ -132,9 +131,24 @@ body h1 {
   flex-direction: column;
 }
 .input-dialog input {
-  height: 24px;
+  height: 27px;
 }
 
 .settings_dialog::backdrop {
   backdrop-filter: blur(3px);
+}
+
+.dialog-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.dialog-form button {
+  padding: 3px;
+  font-size: 1.1rem;
+  background-color: #60d394;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
 }
